@@ -1,3 +1,7 @@
+2007-06-19	Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/dvbcut.cpp: show filenames in caption.
+
 2007-06-17	Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/defines.h: include *.rec in DEFAULT_LOADFILTER.
